## 중간작업 결과물 저장 * 사진 리사이즈 코드 추가 * 사진 액자 CellView에 보더를 이미지뷰 뒤에 표시하도록 변경

--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="urh-dS-bEg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="urh-dS-bEg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -179,6 +179,10 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3vN-VQ-JBz">
+                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                        </view>
                                                         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MMh-dV-bQl">
                                                             <rect key="frame" x="2" y="2" width="46" height="46"/>
                                                             <subviews>
@@ -193,8 +197,12 @@
                                                                 <constraint firstItem="LtK-NN-YZ5" firstAttribute="centerY" secondItem="MMh-dV-bQl" secondAttribute="centerY" id="7tw-ZB-xWA"/>
                                                                 <constraint firstItem="LtK-NN-YZ5" firstAttribute="top" secondItem="MMh-dV-bQl" secondAttribute="top" id="8G1-M7-4c8"/>
                                                                 <constraint firstAttribute="trailing" secondItem="LtK-NN-YZ5" secondAttribute="trailing" id="B4e-ue-CBM"/>
+                                                                <constraint firstItem="LtK-NN-YZ5" firstAttribute="top" secondItem="MMh-dV-bQl" secondAttribute="top" id="Hd0-Nh-1iu"/>
                                                                 <constraint firstAttribute="trailing" secondItem="LtK-NN-YZ5" secondAttribute="trailing" id="MNW-Nb-8wZ"/>
+                                                                <constraint firstAttribute="trailing" secondItem="LtK-NN-YZ5" secondAttribute="trailing" id="cov-8U-W0R"/>
+                                                                <constraint firstAttribute="bottom" secondItem="LtK-NN-YZ5" secondAttribute="bottom" id="deu-uB-RHi"/>
                                                                 <constraint firstItem="LtK-NN-YZ5" firstAttribute="leading" secondItem="MMh-dV-bQl" secondAttribute="leading" id="lGh-ok-H0L"/>
+                                                                <constraint firstItem="LtK-NN-YZ5" firstAttribute="leading" secondItem="MMh-dV-bQl" secondAttribute="leading" id="pbq-O9-W9j"/>
                                                                 <constraint firstItem="LtK-NN-YZ5" firstAttribute="leading" secondItem="MMh-dV-bQl" secondAttribute="leading" id="qPx-Os-crR"/>
                                                                 <constraint firstItem="LtK-NN-YZ5" firstAttribute="top" secondItem="MMh-dV-bQl" secondAttribute="top" id="xqt-YI-01c"/>
                                                                 <constraint firstAttribute="bottom" secondItem="LtK-NN-YZ5" secondAttribute="bottom" id="zU1-dd-m2I"/>
@@ -203,9 +211,13 @@
                                                             <variation key="default">
                                                                 <mask key="constraints">
                                                                     <exclude reference="6fK-0Z-Is5"/>
+                                                                    <exclude reference="8G1-M7-4c8"/>
                                                                     <exclude reference="B4e-ue-CBM"/>
+                                                                    <exclude reference="MNW-Nb-8wZ"/>
+                                                                    <exclude reference="lGh-ok-H0L"/>
                                                                     <exclude reference="qPx-Os-crR"/>
                                                                     <exclude reference="xqt-YI-01c"/>
+                                                                    <exclude reference="zU1-dd-m2I"/>
                                                                 </mask>
                                                             </variation>
                                                         </scrollView>
@@ -214,24 +226,45 @@
                                                 </view>
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="MMh-dV-bQl" secondAttribute="bottom" constant="2" id="6Jx-6k-Svw"/>
+                                                    <constraint firstAttribute="trailing" secondItem="MMh-dV-bQl" secondAttribute="trailing" constant="2" id="6kO-VU-Ill"/>
+                                                    <constraint firstItem="3vN-VQ-JBz" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leadingMargin" id="Bqz-aO-6PG"/>
                                                     <constraint firstAttribute="trailing" secondItem="MMh-dV-bQl" secondAttribute="trailing" constant="2" id="KOv-Vp-dcJ"/>
                                                     <constraint firstItem="MMh-dV-bQl" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leadingMargin" id="OcJ-i9-8oJ"/>
                                                     <constraint firstItem="MMh-dV-bQl" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="top" constant="2" id="SRG-Xs-tkQ"/>
+                                                    <constraint firstAttribute="trailingMargin" secondItem="3vN-VQ-JBz" secondAttribute="trailing" id="T1a-bi-E1Z"/>
+                                                    <constraint firstItem="3vN-VQ-JBz" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leading" id="VuH-iP-moe"/>
+                                                    <constraint firstAttribute="bottomMargin" secondItem="3vN-VQ-JBz" secondAttribute="bottom" id="W95-TM-EIt"/>
+                                                    <constraint firstItem="3vN-VQ-JBz" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="topMargin" id="aB6-xV-Rjt"/>
+                                                    <constraint firstAttribute="bottom" secondItem="3vN-VQ-JBz" secondAttribute="bottom" id="eWv-JH-D29"/>
+                                                    <constraint firstItem="3vN-VQ-JBz" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="top" id="fZQ-O4-gHZ"/>
+                                                    <constraint firstItem="MMh-dV-bQl" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="top" constant="2" id="gbS-9i-yzp"/>
+                                                    <constraint firstAttribute="trailing" secondItem="3vN-VQ-JBz" secondAttribute="trailing" id="hBk-6M-oSr"/>
+                                                    <constraint firstAttribute="bottom" secondItem="MMh-dV-bQl" secondAttribute="bottom" constant="2" id="ipy-bB-2aH"/>
                                                     <constraint firstAttribute="trailingMargin" secondItem="MMh-dV-bQl" secondAttribute="trailing" id="lPS-Rg-Uu0"/>
                                                     <constraint firstItem="MMh-dV-bQl" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leading" constant="2" id="nZJ-rx-iQx"/>
                                                     <constraint firstAttribute="bottomMargin" secondItem="MMh-dV-bQl" secondAttribute="bottom" id="s4v-B3-4kl"/>
+                                                    <constraint firstItem="MMh-dV-bQl" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leading" constant="2" id="sxh-KB-fLq"/>
                                                     <constraint firstItem="MMh-dV-bQl" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="topMargin" id="wU5-pD-Ynq"/>
                                                 </constraints>
                                                 <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                                 <variation key="default">
                                                     <mask key="constraints">
+                                                        <exclude reference="Bqz-aO-6PG"/>
+                                                        <exclude reference="T1a-bi-E1Z"/>
+                                                        <exclude reference="W95-TM-EIt"/>
+                                                        <exclude reference="aB6-xV-Rjt"/>
+                                                        <exclude reference="6Jx-6k-Svw"/>
+                                                        <exclude reference="KOv-Vp-dcJ"/>
                                                         <exclude reference="OcJ-i9-8oJ"/>
+                                                        <exclude reference="SRG-Xs-tkQ"/>
                                                         <exclude reference="lPS-Rg-Uu0"/>
+                                                        <exclude reference="nZJ-rx-iQx"/>
                                                         <exclude reference="s4v-B3-4kl"/>
                                                         <exclude reference="wU5-pD-Ynq"/>
                                                     </mask>
                                                 </variation>
                                                 <connections>
+                                                    <outlet property="photoFrameView" destination="3vN-VQ-JBz" id="qVg-nI-ZqJ"/>
                                                     <outlet property="photoImageView" destination="LtK-NN-YZ5" id="pGQ-pt-UrE"/>
                                                     <outlet property="photoScrollView" destination="MMh-dV-bQl" id="N66-Ba-Qos"/>
                                                 </connections>
