--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dKW-hc-NhL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="urh-dS-bEg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -221,7 +221,7 @@
                                                                 </mask>
                                                             </variation>
                                                         </scrollView>
-                                                        <imageView alpha="0.59999999999999998" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Downloading" translatesAutoresizingMaskIntoConstraints="NO" id="uGA-9b-WI7">
+                                                        <imageView hidden="YES" alpha="0.59999999999999998" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Downloading" translatesAutoresizingMaskIntoConstraints="NO" id="uGA-9b-WI7">
                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         </imageView>
@@ -300,8 +300,6 @@
                                     </constraint>
                                 </constraints>
                                 <items>
-                                    <barButtonItem title="Photo" id="gyC-Le-xen"/>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="n48-ZW-9ME"/>
                                     <barButtonItem title="Pen" id="7yI-uU-Tva"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="IIc-Pe-QiX"/>
                                     <barButtonItem title="Text" id="uTz-f6-4sI"/>
