--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dKW-hc-NhL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dKW-hc-NhL">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -183,44 +183,10 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         </view>
-                                                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MMh-dV-bQl">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LtK-NN-YZ5">
                                                             <rect key="frame" x="2" y="2" width="46" height="46"/>
-                                                            <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LtK-NN-YZ5">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="46" height="46"/>
-                                                                    <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                                                                </imageView>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstItem="LtK-NN-YZ5" firstAttribute="centerX" secondItem="MMh-dV-bQl" secondAttribute="centerX" id="5te-PO-bvg"/>
-                                                                <constraint firstAttribute="bottom" secondItem="LtK-NN-YZ5" secondAttribute="bottom" id="6fK-0Z-Is5"/>
-                                                                <constraint firstItem="LtK-NN-YZ5" firstAttribute="centerY" secondItem="MMh-dV-bQl" secondAttribute="centerY" id="7tw-ZB-xWA"/>
-                                                                <constraint firstItem="LtK-NN-YZ5" firstAttribute="top" secondItem="MMh-dV-bQl" secondAttribute="top" id="8G1-M7-4c8"/>
-                                                                <constraint firstAttribute="trailing" secondItem="LtK-NN-YZ5" secondAttribute="trailing" id="B4e-ue-CBM"/>
-                                                                <constraint firstItem="LtK-NN-YZ5" firstAttribute="top" secondItem="MMh-dV-bQl" secondAttribute="top" id="Hd0-Nh-1iu"/>
-                                                                <constraint firstAttribute="trailing" secondItem="LtK-NN-YZ5" secondAttribute="trailing" id="MNW-Nb-8wZ"/>
-                                                                <constraint firstAttribute="trailing" secondItem="LtK-NN-YZ5" secondAttribute="trailing" id="cov-8U-W0R"/>
-                                                                <constraint firstAttribute="bottom" secondItem="LtK-NN-YZ5" secondAttribute="bottom" id="deu-uB-RHi"/>
-                                                                <constraint firstItem="LtK-NN-YZ5" firstAttribute="leading" secondItem="MMh-dV-bQl" secondAttribute="leading" id="lGh-ok-H0L"/>
-                                                                <constraint firstItem="LtK-NN-YZ5" firstAttribute="leading" secondItem="MMh-dV-bQl" secondAttribute="leading" id="pbq-O9-W9j"/>
-                                                                <constraint firstItem="LtK-NN-YZ5" firstAttribute="leading" secondItem="MMh-dV-bQl" secondAttribute="leading" id="qPx-Os-crR"/>
-                                                                <constraint firstItem="LtK-NN-YZ5" firstAttribute="top" secondItem="MMh-dV-bQl" secondAttribute="top" id="xqt-YI-01c"/>
-                                                                <constraint firstAttribute="bottom" secondItem="LtK-NN-YZ5" secondAttribute="bottom" id="zU1-dd-m2I"/>
-                                                            </constraints>
                                                             <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                                                            <variation key="default">
-                                                                <mask key="constraints">
-                                                                    <exclude reference="6fK-0Z-Is5"/>
-                                                                    <exclude reference="8G1-M7-4c8"/>
-                                                                    <exclude reference="B4e-ue-CBM"/>
-                                                                    <exclude reference="MNW-Nb-8wZ"/>
-                                                                    <exclude reference="lGh-ok-H0L"/>
-                                                                    <exclude reference="qPx-Os-crR"/>
-                                                                    <exclude reference="xqt-YI-01c"/>
-                                                                    <exclude reference="zU1-dd-m2I"/>
-                                                                </mask>
-                                                            </variation>
-                                                        </scrollView>
+                                                        </imageView>
                                                         <imageView hidden="YES" alpha="0.59999999999999998" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Downloading" translatesAutoresizingMaskIntoConstraints="NO" id="uGA-9b-WI7">
                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -229,30 +195,22 @@
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 </view>
                                                 <constraints>
-                                                    <constraint firstAttribute="bottom" secondItem="MMh-dV-bQl" secondAttribute="bottom" constant="2" id="6Jx-6k-Svw"/>
-                                                    <constraint firstAttribute="trailing" secondItem="MMh-dV-bQl" secondAttribute="trailing" constant="2" id="6kO-VU-Ill"/>
                                                     <constraint firstItem="3vN-VQ-JBz" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leadingMargin" id="Bqz-aO-6PG"/>
                                                     <constraint firstItem="uGA-9b-WI7" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leading" id="CJI-UL-xN1"/>
-                                                    <constraint firstAttribute="trailing" secondItem="MMh-dV-bQl" secondAttribute="trailing" constant="2" id="KOv-Vp-dcJ"/>
-                                                    <constraint firstItem="MMh-dV-bQl" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leadingMargin" id="OcJ-i9-8oJ"/>
-                                                    <constraint firstItem="MMh-dV-bQl" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="top" constant="2" id="SRG-Xs-tkQ"/>
+                                                    <constraint firstAttribute="bottom" secondItem="LtK-NN-YZ5" secondAttribute="bottom" constant="2" id="FV7-Zt-5ov"/>
                                                     <constraint firstAttribute="trailingMargin" secondItem="3vN-VQ-JBz" secondAttribute="trailing" id="T1a-bi-E1Z"/>
                                                     <constraint firstItem="3vN-VQ-JBz" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leading" id="VuH-iP-moe"/>
                                                     <constraint firstAttribute="bottomMargin" secondItem="3vN-VQ-JBz" secondAttribute="bottom" id="W95-TM-EIt"/>
                                                     <constraint firstItem="3vN-VQ-JBz" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="topMargin" id="aB6-xV-Rjt"/>
+                                                    <constraint firstItem="LtK-NN-YZ5" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="top" constant="2" id="ckG-Ys-c60"/>
                                                     <constraint firstAttribute="bottom" secondItem="3vN-VQ-JBz" secondAttribute="bottom" id="eWv-JH-D29"/>
                                                     <constraint firstItem="3vN-VQ-JBz" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="top" id="fZQ-O4-gHZ"/>
                                                     <constraint firstAttribute="trailing" secondItem="uGA-9b-WI7" secondAttribute="trailing" id="g4j-Ln-gKP"/>
-                                                    <constraint firstItem="MMh-dV-bQl" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="top" constant="2" id="gbS-9i-yzp"/>
                                                     <constraint firstAttribute="trailing" secondItem="3vN-VQ-JBz" secondAttribute="trailing" id="hBk-6M-oSr"/>
-                                                    <constraint firstAttribute="bottom" secondItem="MMh-dV-bQl" secondAttribute="bottom" constant="2" id="ipy-bB-2aH"/>
-                                                    <constraint firstAttribute="trailingMargin" secondItem="MMh-dV-bQl" secondAttribute="trailing" id="lPS-Rg-Uu0"/>
-                                                    <constraint firstItem="MMh-dV-bQl" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leading" constant="2" id="nZJ-rx-iQx"/>
-                                                    <constraint firstAttribute="bottomMargin" secondItem="MMh-dV-bQl" secondAttribute="bottom" id="s4v-B3-4kl"/>
-                                                    <constraint firstItem="MMh-dV-bQl" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leading" constant="2" id="sxh-KB-fLq"/>
+                                                    <constraint firstItem="LtK-NN-YZ5" firstAttribute="leading" secondItem="DjO-mb-ZRh" secondAttribute="leading" constant="2" id="iSP-K0-KFe"/>
+                                                    <constraint firstAttribute="trailing" secondItem="LtK-NN-YZ5" secondAttribute="trailing" constant="2" id="pz2-fB-5Qs"/>
                                                     <constraint firstItem="uGA-9b-WI7" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="top" id="uLD-SO-rQP"/>
                                                     <constraint firstAttribute="bottom" secondItem="uGA-9b-WI7" secondAttribute="bottom" id="vDN-87-bba"/>
-                                                    <constraint firstItem="MMh-dV-bQl" firstAttribute="top" secondItem="DjO-mb-ZRh" secondAttribute="topMargin" id="wU5-pD-Ynq"/>
                                                 </constraints>
                                                 <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                                 <variation key="default">
@@ -261,21 +219,12 @@
                                                         <exclude reference="T1a-bi-E1Z"/>
                                                         <exclude reference="W95-TM-EIt"/>
                                                         <exclude reference="aB6-xV-Rjt"/>
-                                                        <exclude reference="6Jx-6k-Svw"/>
-                                                        <exclude reference="KOv-Vp-dcJ"/>
-                                                        <exclude reference="OcJ-i9-8oJ"/>
-                                                        <exclude reference="SRG-Xs-tkQ"/>
-                                                        <exclude reference="lPS-Rg-Uu0"/>
-                                                        <exclude reference="nZJ-rx-iQx"/>
-                                                        <exclude reference="s4v-B3-4kl"/>
-                                                        <exclude reference="wU5-pD-Ynq"/>
                                                     </mask>
                                                 </variation>
                                                 <connections>
                                                     <outlet property="photoFrameView" destination="3vN-VQ-JBz" id="qVg-nI-ZqJ"/>
                                                     <outlet property="photoImageView" destination="LtK-NN-YZ5" id="pGQ-pt-UrE"/>
                                                     <outlet property="photoLoadingView" destination="uGA-9b-WI7" id="bsH-7y-Hyz"/>
-                                                    <outlet property="photoScrollView" destination="MMh-dV-bQl" id="N66-Ba-Qos"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
@@ -344,11 +293,72 @@
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="7vD-hf-90M" id="YmS-tL-g0M"/>
+                        <segue destination="Xwq-Eq-fPd" kind="show" identifier="moveToPhotoCrop" id="0Xx-6d-1lz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jzB-Gq-28Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1650" y="317"/>
+        </scene>
+        <!--Photo Crop View Controller-->
+        <scene sceneID="R8X-vd-KNR">
+            <objects>
+                <viewController id="Xwq-Eq-fPd" customClass="PhotoCropViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yTB-Fy-n3e"/>
+                        <viewControllerLayoutGuide type="bottom" id="EZj-xj-WEl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4SC-VB-6va">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wqW-63-XOx">
+                                <rect key="frame" x="0.0" y="520" width="600" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="S5l-Wu-83R"/>
+                                </constraints>
+                            </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qeh-wW-Ehr" customClass="PECropView">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qeh-wW-Ehr" firstAttribute="width" secondItem="4SC-VB-6va" secondAttribute="width" id="2Bd-yb-gvc"/>
+                            <constraint firstItem="wqW-63-XOx" firstAttribute="width" secondItem="4SC-VB-6va" secondAttribute="width" id="7K5-Mf-God"/>
+                            <constraint firstItem="qeh-wW-Ehr" firstAttribute="top" secondItem="yTB-Fy-n3e" secondAttribute="bottom" id="9tq-Vq-OyT"/>
+                            <constraint firstItem="EZj-xj-WEl" firstAttribute="top" secondItem="wqW-63-XOx" secondAttribute="bottom" id="BeY-bQ-HBx"/>
+                            <constraint firstItem="qeh-wW-Ehr" firstAttribute="centerX" secondItem="4SC-VB-6va" secondAttribute="centerX" id="Hjm-0I-vtf"/>
+                            <constraint firstItem="EZj-xj-WEl" firstAttribute="top" secondItem="qeh-wW-Ehr" secondAttribute="bottom" id="Nc1-by-Pq7"/>
+                            <constraint firstItem="wqW-63-XOx" firstAttribute="centerX" secondItem="4SC-VB-6va" secondAttribute="centerX" id="sr0-2g-7S8"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="sTP-ss-kYA">
+                        <barButtonItem key="leftBarButtonItem" image="Back" id="my2-34-gkA">
+                            <inset key="imageInsets" minX="-10" minY="7" maxX="25" maxY="7"/>
+                            <connections>
+                                <action selector="backAction:" destination="Xwq-Eq-fPd" id="P56-lB-0d4"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" image="Done" id="2EJ-A3-99n">
+                            <inset key="imageInsets" minX="16" minY="8" maxX="0.0" maxY="8"/>
+                            <connections>
+                                <action selector="doneAction:" destination="Xwq-Eq-fPd" id="jXN-V3-lAr"/>
+                            </connections>
+                        </barButtonItem>
+                        <connections>
+                            <outlet property="leftBarButtonItem" destination="my2-34-gkA" id="j8M-a2-YjY"/>
+                            <outlet property="rightBarButtonItem" destination="2EJ-A3-99n" id="8dD-eC-yvn"/>
+                        </connections>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="cropView" destination="qeh-wW-Ehr" id="OcH-bo-IYe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zyG-J5-bee" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1650" y="1118"/>
         </scene>
         <!--Photo Frame Select View Controller-->
         <scene sceneID="hYQ-ZS-nHx">
