## 사진 앨범에서 사진을 불러오지 못하는 문제 일부 해결 * UIImagePickerController의 속성값을 PhotoLibrary에서 SavedPhotoAlbum으로 변경하였다. * 위의 변화로 불러오지 못하는 사진들을 불러올 수 있게 되었지만, 여전히 불러오지 못하는 사진들이 존재한다.

--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -78,6 +78,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="albumButton" destination="FY3-cc-wpi" id="J7o-Iw-RFC"/>
                         <segue destination="oMG-MB-uvc" kind="show" identifier="moveToPhotoFrameSelect" id="mdC-To-FUk"/>
                     </connections>
                 </viewController>
